--- a/BaselinkerSubiektConnector/MainWindow.xaml
+++ b/BaselinkerSubiektConnector/MainWindow.xaml
@@ -10,6 +10,9 @@
 
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
+        <Style x:Key="DataGridCellStyle" TargetType="DataGridCell">
+            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+        </Style>
     </Window.Resources>
 
     <Grid>
@@ -378,8 +381,44 @@
 
 
 
-            <TabItem Header="Synchronizacja magazynów">
+            <TabItem Header="Asortyment">
+                <TabControl>
+                    <TabItem Header="Lista">
+                        <DataGrid x:Name="AssortmentsTable" Grid.Row="0" AutoGenerateColumns="False">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="Identyfikator Baselinker" Binding="{Binding BaselinkerId}" 
+                            Width="*" ElementStyle="{StaticResource DataGridCellStyle}"/>
+                                <DataGridTextColumn Header="Nazwa Baselinker" Binding="{Binding BaselinkerName}" 
+                            Width="*" ElementStyle="{StaticResource DataGridCellStyle}"/>
+                                <DataGridTextColumn Header="Kod kreskowy" Binding="{Binding Barcode}" 
+                            Width="*" ElementStyle="{StaticResource DataGridCellStyle}"/>
+                                <DataGridTextColumn Header="Subiekt Symbol" Binding="{Binding SubiektSymbol}" 
+                            Width="*" ElementStyle="{StaticResource DataGridCellStyle}"/>
+                                <DataGridTextColumn Header="Subiekt Nazwa" Binding="{Binding SubiektName}" 
+                            Width="*" ElementStyle="{StaticResource DataGridCellStyle}"/>
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </TabItem>
+                    <TabItem Header="Dodaj do Baselinker">
 
+                    </TabItem>
+                    <TabItem Header="Pobieranie danych">
+                        <Grid>
+                            <Border BorderBrush="#007bff" BorderThickness="1" Background="#f8f9fa" CornerRadius="5" Margin="20">
+                                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20">
+                                    <TextBlock Text="Aktualizacja asortymentu w Baselinker" FontWeight="Bold" FontSize="16" Margin="0,0,0,10"/>
+                                    <TextBlock Text="Aby rozpocząć pracę z synchronizacją magazynów wymagane jest pobranie asortymentu z Baselinker" TextWrapping="Wrap" Margin="0,0,0,20"/>
+                                    <Button Content="Aktualizuj z Baselinker" x:Name="assortmentsBaselinkerSyncButton"  Click="AssortmentsBaselinkerSyncButton_ClickAsync" HorizontalAlignment="Center" Padding="10,5" Width="300" Background="#007bff" Foreground="White" FontWeight="Bold"/>
+                                    <ProgressBar x:Name="assortments_BaselinkerSyncProgressBar" Value="0" Height="20" Grid.Row="1" HorizontalAlignment="Stretch" Margin="5,10" Visibility="Collapsed"/>
+                                    <TextBlock x:Name="assortments_BaselinkerSyncProgressText" Text="Trwa aktualizacja..." Grid.Row="1" HorizontalAlignment="Center" Margin="5,0" Visibility="Collapsed"/>
+
+                                </StackPanel>
+                            </Border>
+                        </Grid>
+                    </TabItem>
+                    <TabItem Header="Synchronizacja stanów magazynowych">
+                    </TabItem>
+                </TabControl>
             </TabItem>
 
             <TabItem Header="Logi">
