--- a/BaselinkerSubiektConnector/MainWindow.xaml
+++ b/BaselinkerSubiektConnector/MainWindow.xaml
@@ -411,10 +411,31 @@
                             </DataGrid>
                         </Grid>
                     </TabItem>
-
-
                     <TabItem Header="Dodaj do Baselinker">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="30"/>
+                                <RowDefinition Height="500"/>
+                            </Grid.RowDefinitions>
 
+                            <Button Content="Wyszukaj asortymentów" Click="SearchMissingProductInBaselinker_Click" Grid.Row="0" HorizontalAlignment="Right" Margin="0,0,0,0" Width="180"/>
+                            <DataGrid x:Name="MissingBaselinkerProducts" AutoGenerateColumns="False" Grid.Column="0" Grid.Row="1" IsReadOnly="True"
+          VirtualizingStackPanel.IsVirtualizing="True" Visibility="Hidden">
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="Kod kreskowy" Binding="{Binding Barcode}" Width="*" ElementStyle="{StaticResource DataGridCellStyle}"/>
+                                    <DataGridTextColumn Header="Symbol asortymentu" Binding="{Binding SubiektSymbol}" Width="*" ElementStyle="{StaticResource DataGridCellStyle}"/>
+                                    <DataGridTextColumn Header="Nazwa asortymentu" Binding="{Binding SubiektName}" Width="*" ElementStyle="{StaticResource DataGridCellStyle}"/>
+                                    <DataGridTemplateColumn Width="*">
+                                        <DataGridTemplateColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Button Content="Dodaj do Baselinker" Click="AddMissingProductToBaselinker_Click"/>
+                                            </DataTemplate>
+                                        </DataGridTemplateColumn.CellTemplate>
+                                    </DataGridTemplateColumn>
+                                </DataGrid.Columns>
+                            </DataGrid>
+
+                        </Grid>
                     </TabItem>
                     <TabItem Header="Pobieranie danych">
                         <Grid>
