--- a/BaselinkerSubiektConnector/AddToBaselinker.xaml
+++ b/BaselinkerSubiektConnector/AddToBaselinker.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="BaselinkerSubiektConnector.AddToBaselinker"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Formularz dodania produktu do Baselinker" Height="630" Width="600">
+        Title="Formularz dodania produktu do Baselinker" Height="500" Width="600">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -23,12 +23,8 @@
                 <TextBlock FontWeight="Bold" Text="SKU" Margin="0 13 0 0"/>
                 <TextBlock FontWeight="Bold" Text="VAT (%)" Margin="0 10 0 0"/>
                 <TextBlock FontWeight="Bold" Text="Waga" Margin="0 11 0 0"/>
-                <TextBlock FontWeight="Bold" Text="Szerokość (cm)" Margin="0 12 0 0"/>
-                <TextBlock FontWeight="Bold" Text="Wysokość (cm)" Margin="0 13 0 0"/>
-                <TextBlock FontWeight="Bold" Text="Długość (cm)" Margin="0 10 0 0"/>
                 <TextBlock FontWeight="Bold" Text="Cena (zł)" Margin="0 12 0 0"/>
                 <TextBlock FontWeight="Bold" Text="Producent" Margin="0 12 0 0"/>
-                <TextBlock FontWeight="Bold" Text="Grupa cenowa" Margin="0 12 0 0"/>
                 <TextBlock FontWeight="Bold" Text="Kategoria" Margin="0 12 0 0"/>
                 <TextBlock FontWeight="Bold" Text="Katalog" Margin="0 12 0 0"/>
                 <TextBlock FontWeight="Bold" Text="Opis produktu" Margin="0 30 0 0"/>
@@ -38,17 +34,13 @@
                 <TextBox x:Name="ProductNameText" Margin="0 0 0 5"/>
                 <TextBox x:Name="EANText" Margin="0 0 0 5"/>
                 <TextBox x:Name="SKUText" Margin="0 0 0 5"/>
-                <TextBox x:Name="VATText" Margin="0 0 0 5"/>
+                <ComboBox x:Name="VatSelect" Margin="0 0 0 5"/>
                 <TextBox x:Name="WeightText" Margin="0 0 0 5"/>
-                <TextBox x:Name="WidthText" Margin="0 0 0 5"/>
-                <TextBox x:Name="HeightText" Margin="0 0 0 5"/>
-                <TextBox x:Name="LengthText" Margin="0 0 0 5"/>
                 <TextBox x:Name="PriceText" Margin="0 0 0 5"/>
                 <ComboBox x:Name="ManufacturerSelect" Margin="0 0 0 5"/>
-                <ComboBox x:Name="PriceGroupSelect" Margin="0 0 0 5"/>
                 <ComboBox x:Name="CategorySelect" Margin="0 0 0 5"/>
                 <ComboBox x:Name="CatalogSelect" Margin="0 0 0 5"/>
-                <TextBox x:Name="DescriptionText" Margin="0 0 0 5" TextWrapping="Wrap" AcceptsReturn="True" Height="100"/>
+                <TextBox x:Name="DescriptionText" Margin="0 0 0 5" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" VerticalContentAlignment="Top" Height="100"/>
             </StackPanel>
         </Grid>
 
