--- a/BaselinkerSubiektConnector/MainWindow.xaml
+++ b/BaselinkerSubiektConnector/MainWindow.xaml
@@ -152,17 +152,18 @@
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
 
                                 <TextBlock Text="Konfiguracja bazy danych" FontWeight="Bold" Grid.Row="0" Margin="5"/>
-                                <TextBlock Text="Adres IP:" Grid.Row="1" Margin="5"/>
-                                <TextBox x:Name="MSSQL_IP" Grid.Row="2" Margin="5"/>
-                                <TextBlock Text="Użytkownik:" Grid.Row="3" Margin="5"/>
-                                <TextBox x:Name="MSSQL_User" Grid.Row="4" Margin="5"/>
-                                <TextBlock Text="Hasło:" Grid.Row="5" Margin="5"/>
-                                <TextBox x:Name="MSSQL_Password" Grid.Row="6" Margin="5"/>
-                                <TextBlock Text="Wybierz baze danych:" Grid.Row="9" Margin="5"/>
-                                <Grid Grid.Row="10" Margin="5">
+                                <TextBlock Text="Adres IP:" Grid.Row="1" Margin="0 0 5 0"/>
+                                <TextBox x:Name="MSSQL_IP" Grid.Row="2" Margin="0 0 5 0"/>
+                                <TextBlock Text="Użytkownik:" Grid.Row="3" Margin="0 0 5 0"/>
+                                <TextBox x:Name="MSSQL_User" Grid.Row="4" Margin="0 0 5 0"/>
+                                <TextBlock Text="Hasło:" Grid.Row="5" Margin="0 0 5 0"/>
+                                <TextBox x:Name="MSSQL_Password" Grid.Row="6" Margin="0 0 5 0"/>
+                                <TextBlock Text="Wybierz baze danych:" Grid.Row="9" Margin="0 0 5 0"/>
+                                <Grid Grid.Row="10" Margin="0 0 5 0">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*" />
                                         <ColumnDefinition Width="Auto" />
@@ -173,10 +174,10 @@
                                 </Grid>
 
                                 <TextBlock Text="Dane logowania Subiekt" FontWeight="Bold" Grid.Row="11" Margin="5"/>
-                                <TextBlock Text="Użytkownik:" Grid.Row="12" Margin="5"/>
+                                <TextBlock Text="Użytkownik:" Grid.Row="12" Margin="0 0 5 0"/>
                                 <ComboBox x:Name="Subiekt_Login" Grid.Row="13" HorizontalAlignment="Stretch" Margin="0 0 5 0"/>
-                                <TextBlock Text="Hasło:" Grid.Row="14" Margin="5"/>
-                                <TextBox x:Name="Subiekt_Password" Grid.Row="15" Margin="5"/>
+                                <TextBlock Text="Hasło:" Grid.Row="14" Margin="0 0 5 0"/>
+                                <TextBox x:Name="Subiekt_Password" Grid.Row="15" Margin="0 0 5 0"/>
 
                                 <TextBlock Text="Konfiguracja Baselinker" FontWeight="Bold" Grid.Row="16" Margin="5"/>
 
@@ -193,7 +194,7 @@
                                     <Button Grid.Column="2" Content="Pobierz magazyny/katalogi" Click="BaselinkerGetStorage_Click" MinWidth="100"/>
                                 </Grid>
 
-                                <Grid Grid.Row="18" Margin="5">
+                                <Grid Grid.Row="18" Margin="0 0 5 0">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto" />
                                         <ColumnDefinition Width="*" />
@@ -203,7 +204,7 @@
 
                                 </Grid>
 
-                                <Grid Grid.Row="19" Margin="5">
+                                <Grid Grid.Row="19" Margin="0 0 5 0">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto" />
                                         <ColumnDefinition Width="*" />
@@ -212,6 +213,8 @@
                                     <ComboBox x:Name="Baselinker_InventoryWarehouseName" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0 0 5 0" />
 
                                 </Grid>
+
+                                <CheckBox x:Name="Baselinker_AddCommentDocNumber" Grid.Row="20" Content="Wysyłaj do Baselinker Baselinker z numerem dokumentu sprzedaży." Margin="5"/>
                             </Grid>
 
 
@@ -258,13 +261,13 @@
 
                                     <StackPanel Grid.Column="0">
                                         <TextBlock Text="Wybierz drukarkę" FontWeight="Bold" Grid.Row="0" Margin="5"/>
-                                        <CheckBox x:Name="Subiekt_PrinterEnabled" Margin="5 0 0 0" Content="Drukować automatycznie?" />
+                                        <CheckBox x:Name="Subiekt_PrinterEnabled" Margin="5 0 0 0" Content="Drukować po utworzeniu dokumentu?" />
                                         <ComboBox x:Name="Subiekt_PrinterName" Margin="5 0 0 0"/>
                                     </StackPanel>
 
                                     <StackPanel Grid.Column="1">
                                         <TextBlock Text="Wybierz kasę fiskalną" FontWeight="Bold" Grid.Row="0" Margin="5"/>
-                                        <CheckBox x:Name="Subiekt_CashRegisterEnabled" Margin="5 0 0 0" Content="Fiskalizować automatycznie?" />
+                                        <CheckBox x:Name="Subiekt_CashRegisterEnabled" Margin="5 0 0 0" Content="Fiskalizować po utworzeniu dokumentu?" />
                                         <ComboBox x:Name="Subiekt_CashRegisterName" Margin="5 0 0 0"/>
                                     </StackPanel>
                                 </Grid>
